# ObserverPattern

./: CMakeLists.txt  README.md  _clang-format
src/: CMakeLists.txt
src/dynamic/: interfaces.h  main.cpp  observer.hpp  subject.hpp
src/static_concepts/: concepts.h  main.cpp  observer.hpp  subject.hpp
src/static_crtp/: interfaces.h  main.cpp  observer.hpp  subject.hpp
